# codex

./: justfile
.github/scripts/: test_macos_signing_entitlements.py
.github/scripts/macos-signing/: select_codex_entitlements.sh
.github/workflows/: bazel.yml  rust-release.yml
codex-rs/: BUILD.bazel  Cargo.toml
codex-rs/app-server/: BUILD.bazel  Cargo.toml  README.md
codex-rs/app-server-daemon/: README.md
codex-rs/app-server-daemon/src/: lib.rs
codex-rs/app-server-protocol/schema/json/: ClientRequest.json  ServerNotification.json  codex_app_server_protocol.schemas.json  codex_app_server_protocol.v2.schemas.json
codex-rs/app-server-protocol/schema/json/v2/: ConfigReadResponse.json
codex-rs/app-server-protocol/schema/typescript/v2/: index.ts
codex-rs/app-server-protocol/src/protocol/: common.rs
codex-rs/app-server-protocol/src/protocol/v2/: config.rs  tests.rs
codex-rs/app-server/benches/: cold_skill_load.rs  cold_thread_start.rs
codex-rs/app-server/src/: lib.rs  message_processor.rs  request_processors.rs
codex-rs/app-server/src/request_processors/: account_processor.rs  apps_processor.rs  plugins.rs
codex-rs/app-server/tests/common/: Cargo.toml  lib.rs  local_websocket_exec_server.rs  rpc_delay.rs  test_app_server.rs
codex-rs/app-server/tests/suite/v2/: account.rs  app_list.rs  auto_env.rs  imagegen_extension.rs  thread_resume.rs  turn_start.rs
codex-rs/cli/src/: login.rs
codex-rs/codex-mcp/src/: connection_manager_tests.rs
codex-rs/core/: Cargo.toml
codex-rs/core-api/src/: lib.rs
codex-rs/core-plugins/src/: remote.rs
codex-rs/core/src/: client.rs  client_tests.rs  compact_remote.rs  compact_remote_v2.rs  realtime_conversation.rs  thread_manager.rs
codex-rs/core/src/config/: config_tests.rs  mod.rs
codex-rs/core/src/session/: mod.rs  tests.rs  turn.rs  turn_context.rs
codex-rs/core/src/tools/handlers/: multi_agents.rs
codex-rs/core/tests/common/: test_codex.rs
codex-rs/core/tests/suite/: client.rs  compact.rs  compact_remote.rs
codex-rs/exec-server/testing/: BUILD.bazel
codex-rs/ext/mcp/tests/: hosted_apps_mcp.rs
codex-rs/login/src/: lib.rs
codex-rs/login/src/auth/: auth_tests.rs  bedrock_api_key.rs  bedrock_api_key_tests.rs  external_auth_snapshot.rs  manager.rs  mod.rs
codex-rs/model-provider-info/src/: lib.rs  model_provider_info_tests.rs
codex-rs/model-provider/src/: auth.rs  models_endpoint.rs  provider.rs
codex-rs/model-provider/src/amazon_bedrock/: mod.rs
codex-rs/protocol/src/: items.rs  legacy_events.rs  protocol.rs
codex-rs/rmcp-client/src/: oauth.rs
codex-rs/rmcp-client/src/oauth/: store_lock.rs
codex-rs/rmcp-client/src/oauth/tests/: persistor_tests.rs
codex-rs/skills/src/assets/samples/plugin-creator/references/: plugin-json-spec.md
codex-rs/skills/src/assets/samples/plugin-creator/scripts/: test_validate_plugin.py  validate_plugin.py
codex-rs/thread-manager-sample/src/: main.rs
codex-rs/tui/src/chatwidget/: protocol.rs  usage.rs
codex-rs/tui/src/chatwidget/tests/: helpers.rs  usage.rs
experiments/: README.md
experiments/20260710-hooks/: README.md  hooks.json  invalid-input.json  stop_hook.py  valid-input.json
experiments/20260710-permissions/: README.md  write-probe.txt
study-notes/: README.md  agent-notes.md  checks.md  codex-architecture.md  completion-audit.md  feature-map.md  goal-and-principles.md  learning-method.md  maintenance.md  stage-1-use-codex-well.md  stage-2-source-reading.md  stage-3-extensions.md  stage-4-upstream-contribution.md  stage-goals.md
study-notes/contributions/: README.md  branch-and-upstream.md  contribution-checklist.md  diagnosis-and-reproduction.md  draft-pr.md  feedback-and-maintenance.md  implementation-and-tests.md  review-and-pr.md  root-cause-and-design.md
study-notes/extensions/: README.md  extension-decision.md  hooks-lifecycle.md  learning-automation-loop.md  mcp-tools-and-permissions.md  plugin-distribution.md  skills-lifecycle.md
study-notes/features/: 01-install-auth-start.md  02-interactive-coding-agent.md  03-non-interactive-exec.md  04-task-context.md  05-permissions-and-safety.md  06-project-guidance.md  07-configuration.md  08-tools-and-extensions.md  09-debugging-and-diagnostics.md  10-git-and-collaboration.md
study-notes/issue-templates/: contribution-study-01-sync.md  contribution-study-02-diagnosis.md  contribution-study-03-design.md  contribution-study-04-implementation.md  contribution-study-05-review.md  contribution-study-06-feedback.md  extension-study-01-decision.md  extension-study-02-skills.md  extension-study-03-mcp.md  extension-study-04-hooks.md  extension-study-05-plugins.md  extension-study-06-loop.md  feature-study.md
