exports_files([
    "clippy.toml",
])

filegroup(
    name = "workspace-files",
    srcs = glob(
        [
            "*",
            ".cargo/**",
        ],
        exclude = [
            "BUILD.bazel",
        ],
    ),
    visibility = ["//visibility:public"],
)

test_suite(
    name = "e2e-benchmarks",
    tags = ["manual"],
    tests = [
        "//codex-rs/app-server:cold-skill-load-bench",
    ],
    visibility = ["//visibility:public"],
)
