load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary")
load("//:defs.bzl", "codex_rust_crate", "workspace_root_test")

codex_rust_crate(
    name = "app-server",
    crate_name = "codex_app_server",
    extra_binaries = [
        "//codex-rs/bwrap:bwrap",
    ],
    extra_binaries_non_windows = [
        "//codex-rs/cli:codex",
        "//codex-rs/rmcp-client:test_stdio_server",
    ],
    integration_test_timeout = "long",
    run_tests_with_wine_exec = True,
    test_shard_counts = {
        # Note app-server-all-test has a large number of integration tests, so
        # even a single shard can be quite slow. When there is a legitimate
        # test failure in a shard, it will still get run 3x in total, which
        # can cause us to exhaust our CI timeout if the shard happens to run
        # long. Using a higher shard count for app-server-all-test should help
        # mitigate this risk.
        "app-server-all-test": 16,
        "app-server-unit-tests": 8,
    },
    test_tags = ["no-sandbox"],
)

rust_binary(
    name = "cold-thread-start-bench-bin",
    testonly = True,
    srcs = ["benches/cold_thread_start.rs"],
    crate_name = "cold_thread_start_bench",
    crate_root = "benches/cold_thread_start.rs",
    data = [
        ":codex-app-server",
        "//codex-rs/exec-server/testing:exec-server",
    ],
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ) + [
        ":app-server",
        "@crates//:divan",
    ],
)

workspace_root_test(
    name = "cold-thread-start-bench",
    data = [
        ":codex-app-server",
        "//codex-rs/exec-server/testing:exec-server",
    ],
    runfile_env = {
        ":codex-app-server": "CARGO_BIN_EXE_codex-app-server",
        "//codex-rs/exec-server/testing:exec-server": "CARGO_BIN_EXE_exec-server",
    },
    test_bin = ":cold-thread-start-bench-bin",
    workspace_root_marker = "//codex-rs/utils/cargo-bin:repo_root.marker",
)
